# KuzuDB-DotNetInterface

KuzuDB-net/: KuzuDB-TestAndExplorer.sln
KuzuDB-net/KuzuDB.NET/: KuzuDB.NET.csproj  build_wrapper.bat  kuzu.h  kuzu.hpp  kuzu.i  kuzu_shared.lib  run_swig.bat
KuzuDB-net/KuzuDB.NET.Test/: KuzuDB.NET.Test.csproj  Program.cs
KuzuDB-net/KuzuDB.NET/wrapper/: CMakeLists.txt  kuzu_wrap.cpp
